--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323|Press+Start+2P" type="text/css"/>
 		
-		<link rel="stylesheet" href="/style.css" type="text/css"/>
-		<script src="/script.js"></script>
+		<link rel="stylesheet" href="style.css" type="text/css"/>
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<div class="container">
